# firebird_to_postgres

./: .env  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
src/: main.py
src/utils/: extract_load.py  source.py
tests/: test_example.py  test_extract_load.py  test_source.py
